methods.args.MethodsArgs.scala.error
Compilation error:
MethodsArgs: error: not found: value move
		move(getY(),getDirection() == Direction.NORTH); 
                ^MethodsArgs:2: error: not found: value versLAvant
if (versLAvant) {
    ^MethodsArgs:3: error: not found: value nbPas
  avance(nbPas)
         ^MethodsArgs:6: error: not found: value nbPas
  recule(nbPas)
         ^