methods.args.MethodsArgs.scala.code
if (versLAvant) {
  avance(nbPas)
}
else {
  recule(nbPas)
}